--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,12 +1,12 @@
 {
   "current": {
     "colors_solid_button_labels": "#ffffff",
-    "colors_accent_1": "#141414",
+    "colors_accent_1": "#121212",
     "gradient_accent_1": "",
-    "colors_accent_2": "#334fb4",
+    "colors_accent_2": "#f05423",
     "gradient_accent_2": "",
-    "colors_text": "#eaeaea",
-    "colors_outline_button_labels": "#ffffff",
+    "colors_text": "#121212",
+    "colors_outline_button_labels": "#121212",
     "colors_background_1": "#141414",
     "gradient_background_1": "",
     "colors_background_2": "#f3f3f3",
@@ -119,7 +119,7 @@
       "header": {
         "type": "header",
         "settings": {
-          "color_scheme": "background-1",
+          "color_scheme": "accent-1",
           "logo": "shopify:\/\/shop_images\/logo.webp",
           "logo_width": 180,
           "logo_position": "top-left",
@@ -156,6 +156,7 @@
           "color_scheme": "background-1",
           "newsletter_enable": true,
           "newsletter_heading": "BECOME VIP - GET 10% DISCOUNT",
+          "newsletter_sub-heading": "Get Exclusive Offers, be the first to know of new arrivals and more.",
           "show_social": true,
           "enable_country_selector": false,
           "enable_language_selector": false,
