--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/nickajulia/ww-shop/issues"
   },
-  "homepage": "https://github.com/nickajulia/ww-shop#readme"
+  "homepage": "https://github.com/nickajulia/ww-shop#readme",
+  "dependencies": {
+    "flickity": "^3.0.0",
+    "jquery": "^3.6.0"
+  }
 }
