Add google font support

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,6 +11,9 @@
     "gradient_background_1": "",
     "colors_background_2": "#ffffff",
     "gradient_background_2": "",
+    "is_gfonts_enabled": true,
+    "gfonts_import_html": "<link rel=\"preconnect\" href=\"https:\/\/fonts.googleapis.com\">\n<link rel=\"preconnect\" href=\"https:\/\/fonts.gstatic.com\" crossorigin=\"\">\n<link href=\"https:\/\/fonts.googleapis.com\/css2?family=Noto+Sans:wght@700&amp;display=swap\" rel=\"stylesheet\">",
+    "type_header_font_custom": "'Noto Sans', sans-serif",
     "type_header_font": "montserrat_n4",
     "heading_scale": 105,
     "type_body_font": "montserrat_n4",
