--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx mix watch"
+    "mix:dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "mix:watch": "npm run mix:dev -- --watch",
+    "mix:build": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "shopify:serve": "shopify theme serve --theme-editor-sync",
+    "shopify:pull": "shopify theme pull",
+    "theme-sync": "run-s mix:build shopify:pull",
+    "deploy": "run-s mix:build && shopify theme push",
+    "deploy:new": "npm run deploy -- --unpublished"
   },
   "repository": {
     "type": "git",
