--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Compiled files
 # assets/app.js
 # assets/app.css
-assets/mix-manifest.json
+# mix-manifest.json
 
 # Node artifact files
 node_modules/
