--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,53 @@
 {
     "/assets/app.js": "/assets/app.js",
-    "/assets/app.css": "/assets/app.css"
+    "/assets/component-cart-items.css": "/assets/component-cart-items.css",
+    "/assets/component-card.css": "/assets/component-card.css",
+    "/assets/component-article-card.css": "/assets/component-article-card.css",
+    "/assets/component-accordion.css": "/assets/component-accordion.css",
+    "/assets/app.css": "/assets/app.css",
+    "/assets/template-giftcard.css": "/assets/template-giftcard.css",
+    "/assets/template-collection.css": "/assets/template-collection.css",
+    "/assets/section-rich-text.css": "/assets/section-rich-text.css",
+    "/assets/section-product-recommendations.css": "/assets/section-product-recommendations.css",
+    "/assets/section-password.css": "/assets/section-password.css",
+    "/assets/section-multicolumn.css": "/assets/section-multicolumn.css",
+    "/assets/section-main-product.css": "/assets/section-main-product.css",
+    "/assets/section-main-page.css": "/assets/section-main-page.css",
+    "/assets/section-main-blog.css": "/assets/section-main-blog.css",
+    "/assets/section-image-banner.css": "/assets/section-image-banner.css",
+    "/assets/section-footer.css": "/assets/section-footer.css",
+    "/assets/section-featured-product.css": "/assets/section-featured-product.css",
+    "/assets/section-featured-blog.css": "/assets/section-featured-blog.css",
+    "/assets/section-email-signup-banner.css": "/assets/section-email-signup-banner.css",
+    "/assets/section-contact-form.css": "/assets/section-contact-form.css",
+    "/assets/section-collection-list.css": "/assets/section-collection-list.css",
+    "/assets/section-blog-post.css": "/assets/section-blog-post.css",
+    "/assets/component-totals.css": "/assets/component-totals.css",
+    "/assets/component-slideshow.css": "/assets/component-slideshow.css",
+    "/assets/component-slider.css": "/assets/component-slider.css",
+    "/assets/component-show-more.css": "/assets/component-show-more.css",
+    "/assets/component-search.css": "/assets/component-search.css",
+    "/assets/component-rte.css": "/assets/component-rte.css",
+    "/assets/component-rating.css": "/assets/component-rating.css",
+    "/assets/component-product-model.css": "/assets/component-product-model.css",
+    "/assets/component-price.css": "/assets/component-price.css",
+    "/assets/component-predictive-search.css": "/assets/component-predictive-search.css",
+    "/assets/component-pickup-availability.css": "/assets/component-pickup-availability.css",
+    "/assets/component-pagination.css": "/assets/component-pagination.css",
+    "/assets/component-newsletter.css": "/assets/component-newsletter.css",
+    "/assets/component-model-viewer-ui.css": "/assets/component-model-viewer-ui.css",
+    "/assets/component-modal-video.css": "/assets/component-modal-video.css",
+    "/assets/component-menu-drawer.css": "/assets/component-menu-drawer.css",
+    "/assets/component-mega-menu.css": "/assets/component-mega-menu.css",
+    "/assets/component-loading-overlay.css": "/assets/component-loading-overlay.css",
+    "/assets/component-list-social.css": "/assets/component-list-social.css",
+    "/assets/component-list-payment.css": "/assets/component-list-payment.css",
+    "/assets/component-list-menu.css": "/assets/component-list-menu.css",
+    "/assets/component-image-with-text.css": "/assets/component-image-with-text.css",
+    "/assets/component-facets.css": "/assets/component-facets.css",
+    "/assets/component-discounts.css": "/assets/component-discounts.css",
+    "/assets/component-deferred-media.css": "/assets/component-deferred-media.css",
+    "/assets/component-collection-hero.css": "/assets/component-collection-hero.css",
+    "/assets/component-cart.css": "/assets/component-cart.css",
+    "/assets/component-cart-notification.css": "/assets/component-cart-notification.css"
 }
