--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -5,8 +5,10 @@
     "/assets/component-article-card.css": "/assets/component-article-card.css",
     "/assets/component-accordion.css": "/assets/component-accordion.css",
     "/assets/app.css": "/assets/app.css",
+    "/assets/template-product.css": "/assets/template-product.css",
     "/assets/template-giftcard.css": "/assets/template-giftcard.css",
     "/assets/template-collection.css": "/assets/template-collection.css",
+    "/assets/skio-plan-picker.css": "/assets/skio-plan-picker.css",
     "/assets/section-rich-text.css": "/assets/section-rich-text.css",
     "/assets/section-product-recommendations.css": "/assets/section-product-recommendations.css",
     "/assets/section-password.css": "/assets/section-password.css",
