Commit STAGING bundled files and template json data

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -11,6 +11,7 @@
     "/assets/skio-plan-picker.css": "/assets/skio-plan-picker.css",
     "/assets/section-rich-text.css": "/assets/section-rich-text.css",
     "/assets/section-product-recommendations.css": "/assets/section-product-recommendations.css",
+    "/assets/section-product-instruction.css": "/assets/section-product-instruction.css",
     "/assets/section-password.css": "/assets/section-password.css",
     "/assets/section-multicolumn.css": "/assets/section-multicolumn.css",
     "/assets/section-main-product.css": "/assets/section-main-product.css",
